# dyadpy

./: .env.example  .gitattributes  .gitignore  .oxfmtignore  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .release-please-manifest.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  commitlint.config.mjs  llms-full.txt  llms.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  stale.yml
benchmarks/: README.md  bench.py  micro_validate.py  pyproject.toml
benchmarks/apps/: dyadpy_app.py  fastapi_app.py  litestar_app.py  tythe_app.py
docs/: README.md  architecture.md  auth.md  design.md  getting-started.md  ir-stability.md  lts.md  reference.md  semver.md  ssr.md
examples/: README.md
examples/nextjs-streaming/: README.md
examples/nextjs-streaming/frontend/: next.config.mjs  package.json
examples/nextjs-streaming/server/: app.py  pyproject.toml
examples/sveltekit-counter/: README.md
examples/sveltekit-counter/frontend/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
examples/sveltekit-counter/frontend/src/: app.html
examples/sveltekit-counter/server/: app.py  pyproject.toml
examples/vite-react/: README.md
examples/vite-react/frontend/: index.html  package.json
examples/vite-react/server/: app.py  pyproject.toml
scripts/: check_versions.py
(+9 files in other folders)
